--- a/index.html
+++ b/index.html
@@ -5,107 +5,50 @@
     <meta charset="UTF-8">
     <title>VitalScore - Test de Edad Biológica</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 40px; background-color: #f9f9f9; color: #333; }
-        h1 { color: #005170; }
+        body { font-family: Arial, sans-serif; margin: 20px; padding: 0; background-color: #f4f8fb; }
+        h1, h2 { color: #003366; }
         .question { margin-bottom: 20px; }
-        .result { font-size: 1.4em; font-weight: bold; margin-top: 30px; display: none; }
-        button { background-color: #007B9E; color: white; padding: 10px 20px; border: none; cursor: pointer; }
-        button:hover { background-color: #005170; }
+        label { display: block; margin-top: 8px; }
+        button { background-color: #0056b3; color: white; padding: 10px 20px; border: none; cursor: pointer; margin-top: 20px; }
+        .result { margin-top: 30px; padding: 20px; background: #e0f7fa; border: 1px solid #b2ebf2; }
     </style>
 </head>
 <body>
-    <h1>VitalScore: Calcula tu Edad Biológica Estimada</h1>
-    <p>Completa este test gratuito y recibe tu resultado directamente en tu correo electrónico.</p>
-    <form id="vitalscore-form">
+    <h1>VitalScore: Test de Edad Biológica</h1>
+    <form id="vitalForm">
         <div class="question">
-            <label>Tu email:</label><br>
-            <input type="email" id="userEmail" required style="width: 300px; padding: 5px;">
+            <h2>1. ¿Cómo describirías tu nivel de energía diaria?</h2>
+            <label><input type="radio" name="energia" value="10"> Muy alto</label>
+            <label><input type="radio" name="energia" value="7"> Bueno</label>
+            <label><input type="radio" name="energia" value="4"> Moderado</label>
+            <label><input type="radio" name="energia" value="1"> Bajo</label>
         </div>
+
         <div class="question">
-            <label>1. ¿Cómo es tu descanso nocturno habitual?</label><br>
-            <select name="q1">
-                <option value="5">Duermo más de 7h y me despierto descansado</option>
-                <option value="4">Duermo entre 6–7h, descanso aceptable</option>
-                <option value="3">Me cuesta conciliar el sueño</option>
-                <option value="2">Duermo menos de 6h</option>
-                <option value="1">Tengo insomnio frecuente</option>
-            </select>
+            <h2>2. ¿Cuál es tu edad?</h2>
+            <input type="number" name="edad" min="0" max="120">
         </div>
-        <div class="question">
-            <label>2. ¿Con qué frecuencia haces ejercicio físico?</label><br>
-            <select name="q2">
-                <option value="5">4+ veces por semana</option>
-                <option value="4">2–3 veces por semana</option>
-                <option value="3">1 vez a la semana</option>
-                <option value="2">Ocasional</option>
-                <option value="1">Sedentario</option>
-            </select>
-        </div>
-        <div class="question">
-            <label>3. ¿Cómo describirías tu alimentación?</label><br>
-            <select name="q3">
-                <option value="5">Equilibrada</option>
-                <option value="4">Intento comer bien</option>
-                <option value="3">Comida rápida frecuente</option>
-                <option value="2">Poca conciencia nutricional</option>
-                <option value="1">Ningún control</option>
-            </select>
-        </div>
-        <div class="question">
-            <label>4. ¿Fumas o has fumado?</label><br>
-            <select name="q4">
-                <option value="5">Nunca</option>
-                <option value="4">Exfumador +5 años</option>
-                <option value="3">Ocasional</option>
-                <option value="2">Menos de 10 cig/día</option>
-                <option value="1">Mucho a diario</option>
-            </select>
-        </div>
-        <div class="question">
-            <label>5. ¿Cuál es tu nivel de estrés actual?</label><br>
-            <select name="q5">
-                <option value="5">Muy bajo</option>
-                <option value="4">Bajo</option>
-                <option value="3">Medio</option>
-                <option value="2">Alto</option>
-                <option value="1">Muy alto</option>
-            </select>
-        </div>
-        <button type="button" onclick="calculateAndShow()">Recibir resultado por email</button>
+
+        <button type="button" onclick="calcularResultado()">Enviar</button>
     </form>
-    <div class="result" id="result"></div>
+
+    <div class="result" id="resultado" style="display:none;">
+        <h2>Tu Resultado VitalScore:</h2>
+        <p id="vitalScore"></p>
+        <p id="edadBiologica"></p>
+    </div>
 
     <script>
-        function calculateAndShow() {
-            const email = document.getElementById("userEmail").value;
-            if (!email) {
-                alert("Por favor, introduce tu email para recibir el resultado.");
-                return;
-            }
+        function calcularResultado() {
+            let energia = parseInt(document.querySelector('input[name="energia"]:checked')?.value || 0);
+            let edad = parseInt(document.querySelector('input[name="edad"]').value || 0);
+            let score = energia * 10;
 
-            const form = document.getElementById("vitalscore-form");
-            let score = 0;
-            for (let i = 1; i <= 5; i++) {
-                const question = form.querySelector(`[name="q${i}"]`);
-                score += parseInt(question.value);
-            }
+            let edadBio = edad - (score / 20);
 
-            let message = "";
-            if (score >= 23) {
-                message = "Excelente. Tu edad biológica estimada es más joven que tu edad cronológica.";
-            } else if (score >= 18) {
-                message = "Tu edad biológica está cerca de la cronológica. Puedes mejorar aún más.";
-            } else if (score >= 13) {
-                message = "Tu cuerpo muestra señales de envejecimiento acelerado.";
-            } else {
-                message = "Atención: podrías estar envejeciendo biológicamente de forma prematura.";
-            }
-
-            document.getElementById("result").style.display = "block";
-            document.getElementById("result").innerText = `Gracias por realizar el test. Tu VitalScore es: ${score}/25
-${message}
-
-(Nota: el resultado aún no se envía automáticamente. Esto se implementa con un sistema de email marketing externo como Mailchimp, Brevo, etc.)`;
+            document.getElementById("vitalScore").innerText = "Tu VitalScore es: " + score;
+            document.getElementById("edadBiologica").innerText = "Tu Edad Biológica estimada es: " + Math.round(edadBio) + " años";
+            document.getElementById("resultado").style.display = "block";
         }
     </script>
 </body>
