--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     <li>✅ Tu edad biológica estimada</li>
     <li>✅ Tu badge de vitalidad</li>
     <li>✅ Recomendaciones personalizadas</li>
-    <li>📘 Nuestro ebook <strong>“GUÍA EXPRESS DE BIOHACKS VITALEXTENSION”</strong> (valorado en 29€)</li>
+    <li>📘 Nuestro ebook <strong>“GUÍA EXPRESS DE BIOHACKS VITALEXTENSION”</strong> </li>
   </ul>
   <p style="font-size: 0.9em; color: gray;">⚖️ <em>Compromiso VitalExtension:</em> Jamás cederemos tu email ni enviaremos spam. Solo lo usaremos para enviarte tu informe y contenido valioso sobre longevidad.</p>
   <input type="email" id="userEmail" placeholder="tu@email.com" style="padding: 10px; width: 70%; max-width: 300px;"><br><br>
@@ -568,14 +568,14 @@ function mostrarRecomendaciones(puntajesPorPilar) {
   <div id="infoExtra" style="margin-top: 40px; text-align: center;">
     <p style="font-size: 1em;">
       📚 ¿Quieres profundizar en la ciencia detrás del VitalScore?
-      <a href="https://www.vitalextension.com/blog/" target="_blank" style="color: #007bff; text-decoration: underline;">
+      <a href="https://www.vitalextension.com/vital-lab/" target="_blank" style="color: #007bff; text-decoration: underline;">
         Descubre los fundamentos en nuestro Blog
       </a>
     </p>
     <p style="font-weight: bold; font-size: 1.1em; margin-top: 20px;">
       🚀 ¿Te gustaría optimizar tu VitalScore con ayuda profesional?
       <a href="https://www.vitalextension.com" target="_blank" style="background-color: #4caf50; color: white; padding: 10px 20px; border-radius: 6px; text-decoration: none;">
-        Conoce el ecosistema VitalExtension.com
+        ¡Click aquí!
       </a>
     </p>
   </div>
