--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VitalScore</title>
+  <meta name="robots" content="noindex">
+
   <style>
     body { font-family: Arial, sans-serif; background: #f0f0f0; padding: 20px; }
     .container { max-width: 800px; margin: auto; background: #fff; padding: 20px; border-radius: 10px; }
